权限管理模块完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,6 +2,8 @@ html,body,#app {
   height: 100%;
   margin: 0;
   padding: 0;
+  /* 使缩小不换行 */
+  min-width: 1366px;
 }
 .el-breadcrumb {
   margin-bottom: 15px;
